<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2010 Alexandre Zani (Alexandre.Zani@gmail.com)

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">Earthquake Warning System</string>
    <string name="enable_monitoring_label">Enable Earthquake Monitoring</string>
    <string name="enable_plugged_in_monitoring_label">Enable When Plugged-In</string>
    <string name="accelerometer_notification">Quake Watcher Running</string>
    <string name="jolt_sensitivity">Jolt Threshold (m^2/s^4)</string>
    <string name="jolt_timeout">Maximum Time Between Jolts (ms)</string>
    <string name="jolt_threashold">Minimum Number of Jolts</string>
    <string name="apply">Apply Settings</string>
    <string name="cancel">Cancel Settings</string>
    <string name="sampling_rate">Sampling Rate</string>
    <string-array name="sample_rates_array">
        <item>Slowest</item>
        <item>Normal</item>
        <item>Fast</item>
        <item>Fastest</item>
    </string-array>
</resources>
