<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <ScrollView android:id="@+id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent" android:orientation="vertical">	
			<TextView android:text="@string/app_name" android:id="@+id/TitleView" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		
			<CheckBox android:text="@string/enable_monitoring_label" android:id="@+id/EnableMonitoring" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
		
			<CheckBox android:text="@string/enable_plugged_in_monitoring_label" android:id="@+id/EnabledPluggedMonitoring" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
		
			<TextView android:text="@string/sampling_rate" android:id="@+id/sampling_rate_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<Spinner android:id="@+id/sampling_rate_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/sampling_rate"></Spinner>
		
			<TextView android:text="@string/jolt_sensitivity" android:id="@+id/jolt_sensitivity_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<EditText android:text="" android:layout_height="wrap_content" android:id="@+id/jolt_sensitivity" android:layout_width="fill_parent" android:inputType="number"></EditText>
		
			<TextView android:text="@string/jolt_timeout" android:id="@+id/jolt_timeout_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<EditText android:text="" android:layout_height="wrap_content" android:id="@+id/jolt_timeout" android:layout_width="fill_parent" android:inputType="number"></EditText>
		
			<TextView android:text="@string/jolt_threashold" android:id="@+id/jolt_threashold_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<EditText android:text="" android:id="@+id/jolt_threashold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="number"></EditText>
		
			<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="horizontal" android:gravity="center_horizontal">
				<Button android:text="@string/apply" android:id="@+id/apply_settings" android:layout_height="wrap_content" android:layout_width="wrap_content" android:clickable="true" android:gravity="center"></Button>
				<Button android:text="@string/cancel" android:id="@+id/cancel_settings" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
			</LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>
